--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -44,6 +44,188 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="70" data-price="5.70">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LKYked"><img src="https://m.media-amazon.com/images/I/61TD6mwjXsL._SR400,400_.jpg" alt="CIOR Water Shoes Men Women Aqua Shoes" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>469 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LKYked">CIOR Water Shoes Men Women Aqua Shoes Barefoot Quick-Dry Swim Shoes for Boating Walking Driving Beach Yoga</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.70</span><span class="ori_price">$18.99</span></address>
+      <textarea readonly="readonly" class="code_area">70Q9VULS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $18.99</strong> with promo code: <strong class="m_codes">70Q9VULS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LKYked">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JZnUdp"><img src="https://m.media-amazon.com/images/I/51yrsFN5OsL._SR400,400_.jpg" alt="PETPAWJOY Cat Bed" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>421 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JZnUdp">PETPAWJOY Cat Bed, Cat Window Perch Window Seat Suction Cups Space Saving Cat Hammock Pet Resting Seat Safety Cat Shelves...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.95</span><span class="ori_price">$17.89</span></address>
+      <textarea readonly="readonly" class="code_area">50QC35R3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $17.89</strong> with promo code: <strong class="m_codes">50QC35R3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JZnUdp">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="6.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SKF1Cv"><img src="https://m.media-amazon.com/images/I/51xIYxzKktL._SR400,400_.jpg" alt="Stainless Steel Insulated Water Bottle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>125 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SKF1Cv">Stainless Steel Insulated Water Bottle - Wide Mouth Leak Proof Vacuum Outdoors Coffee Mug - Ice Cold Up to 24 Hrs/Hot...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.00</span><span class="ori_price">$11.99</span></address>
+      <textarea readonly="readonly" class="code_area">50IU7Y3B</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $11.99</strong> with promo code: <strong class="m_codes">50IU7Y3B</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SKF1Cv">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Mp38VZ"><img src="https://m.media-amazon.com/images/I/71ed14BfShL._SR400,400_.jpg" alt="NEWYES Reusable Smart Notebook" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>24 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Mp38VZ">NEWYES Reusable Smart Notebook, A5 Size Wirebound Notebook with Cloud Storage - 50 Pages Wide Rule & 50 Pages Dotted</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">50XKEGKC</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">50XKEGKC</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Mp38VZ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="23.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30YWdqC"><img src="https://m.media-amazon.com/images/I/41Vu4fImQkL._SR400,400_.jpg" alt="HalfSun Fitness Tracker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>357 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30YWdqC">HalfSun Fitness Tracker, Activity Tracker Fitness Watch with Heart Rate Monitor, Blood Pressure Monitor,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.39</span><span class="ori_price">$38.99</span></address>
+      <textarea readonly="readonly" class="code_area">40L1HPRP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $38.99</strong> with promo code: <strong class="m_codes">40L1HPRP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 30, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30YWdqC">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="7.50">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="https://m.media-amazon.com/images/I/71Roev-iCiL._SR400,400_.jpg" alt="Brewsly Insulated Water Bottle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>53 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="product_link">Brewsly Insulated Water Bottle, Double Wall Vacuum Insulated Stainless Steel Leak Proof Sports Water Bottle, with BPA Free Cap,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">50ZEEZIQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $14.99</strong> with promo code: <strong class="m_codes">50ZEEZIQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LKZrup"><img src="https://m.media-amazon.com/images/I/81VTLrQku5L._SR400,400_.jpg" alt="Cell Phone Armband for Running" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>203 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LKZrup">Cell Phone Armband for Running, Exercise - Workout Phone Holder with Adjustable Arm Band, Zipper Pocket - Universal Armband for iPhone ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$9.99</span></address>
+      <textarea readonly="readonly" class="code_area">552OBBA8</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $9.99</strong> with promo code: <strong class="m_codes">552OBBA8</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LKZrup">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="13.56">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YmoUvT"><img src="https://m.media-amazon.com/images/I/41olhTovV6L._SR400,400_.jpg" alt="Pure Hyaluronic Acid Serum Powder" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>308 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YmoUvT">Pure Hyaluronic Acid Serum Powder | 100% NATURAL | High Molecular Weight | Locks in moisture and creates full,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.56</span><span class="ori_price">$16.95</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">20XJASMINE</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $16.95</strong> with promo code: <strong class="m_codes">20XJASMINE</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 04, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YmoUvT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="29.10">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LKYuSy"><img src="https://m.media-amazon.com/images/I/513sM41GqaL._SR400,400_.jpg" alt="Negative Ionic Folding Hair Dryer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>513 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LKYuSy">JINRI Travel Hair Dryer 1875 Watt Dual Voltage Blow Dryer Dc Motor Foldable Handle Lightweight Negative Ionic Folding Hair Dryer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.10</span><span class="ori_price">$96.99</span></address>
+      <textarea readonly="readonly" class="code_area">70ZHPT5W</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $96.99</strong> with promo code: <strong class="m_codes">70ZHPT5W</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 04, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LKYuSy">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30Zazan"><img src="https://m.media-amazon.com/images/I/71JkhvaEC5L._SR400,400_.jpg" alt="Bluetooth Shower Speakers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>109 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30Zazan">Bluetooth Shower Speakers, HAISSKY Portable Wireless Waterproof Speaker with FM Radio & Suction Cup, Pairs Easily to...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$24.99</span></address>
+      <textarea readonly="readonly" class="code_area">HAISSKY</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $24.99</strong> with promo code: <strong class="m_codes">HAISSKY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 03, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30Zazan">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="60" data-price="11.60">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LKURwd"><img src="https://m.media-amazon.com/images/I/81TM6sgs8QL._SR400,400_.jpg" alt="Adorllya Womens Slides Sandals Slip" /></a>
