--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -53,6 +53,250 @@
     <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> -->
 
 
+<div class="card clearfix" data-score="50" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32ZZS9F"><img src="https://images-na.ssl-images-amazon.com/images/I/810AkkpqgsL._SX522_.jpg" alt="Philips Sonicare Essence Sonic Rechargeable Toothbrush" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>8,157 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32ZZS9F">Philips Sonicare Essence Sonic Rechargeable Toothbrush, White </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$49.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/32ZZS9F">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="24" data-price="26.75">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YrOV18"><img src="https://images-na.ssl-images-amazon.com/images/I/71k1c2rCvhL._SX425_.jpg" alt="Bed Head Curls in Check Hair Dryer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>716 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>24% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YrOV18">Bed Head Curls in Check 1875 Watt Diffuser Hair Dryer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$26.75</span><span class="ori_price">$34.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YrOV18">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="24.76">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YqC7Uk"><img src="https://images-na.ssl-images-amazon.com/images/I/81FbLqxPjPL._SX522_.jpg" alt="CeraVe Facial Moisturizing Lotion PM" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,728 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YqC7Uk">CeraVe Facial Moisturizing Lotion PM | 3 Ounce (Pack of 2) | Ultra Lightweight, Night Face Moisturizer | Fragrance Free</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.76</span><span class="ori_price">$32.98</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YqC7Uk">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="12.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JXa5Mu"><img src="https://images-na.ssl-images-amazon.com/images/I/81qdd-OPQpL._SX522_.jpg" alt="Aquaphor Healing Ointment" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>3,369 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JXa5Mu">Aquaphor Healing Ointment - Moisturizing Skin Protectant for Dry Cracked Hands, Heels and Elbows - 14 oz. Jar </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$12.97</span><span class="ori_price">$16.89</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JXa5Mu">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SMcBrE"><img src="https://images-na.ssl-images-amazon.com/images/I/51lS5gvNgyL._SX522_.jpg" alt="Amazon Ethernet Adapter" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>3,775 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SMcBrE">Amazon Ethernet Adapter for Amazon Fire TV Devices</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$14.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2SMcBrE">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="17" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33009JJ"><img src="https://images-na.ssl-images-amazon.com/images/I/61xNxQEJfkL._SX679_.jpg" alt="TP-Link | AC750 WiFi Extender" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>8,410 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>17% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33009JJ">TP-Link | AC750 WiFi Extender - Dual Band Cloud App Control | 2019 Release | Up to 750Mbps | One Button Setup Repeater,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/33009JJ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/313NbZE"><img src="https://images-na.ssl-images-amazon.com/images/I/51-3DrGGluL._SX522_.jpg" alt="Labobbon 3.5mm Headphone Jack Adapter" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,020 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/313NbZE">Labobbon 3.5mm Headphone Jack Adapter, Connector for iPhone Xs/ Xs Max/ XR/ iPhone 8/8 Plus/X (10) / 7/ 7 Plus,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$18.00</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/313NbZE">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="3.75">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32Wigjt"><img src="https://images-na.ssl-images-amazon.com/images/I/816vLiMQN8L._SX522_.jpg" alt="NYX PROFESSIONAL MAKEUP Makeup Setting Spray" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>4,156 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32Wigjt">NYX PROFESSIONAL MAKEUP Makeup Setting Spray, Matte Finish, 2.03 Ounce</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$3.75</span><span class="ori_price">$8.50</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/32Wigjt">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="21" data-price="9.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LKjgBZ"><img src="https://images-na.ssl-images-amazon.com/images/I/91p3-h9s5jL._SX522_.jpg" alt="Crest 3D White Toothpaste" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>480 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>21% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LKjgBZ">Crest 3D White Toothpaste Radiant Mint 4.8 oz (3 pack) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.97</span><span class="ori_price">$12.59</span>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LKjgBZ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SISFps"><img src="https://images-na.ssl-images-amazon.com/images/I/61iixOb9aVL._SX679_.jpg" alt="LIFX A19 Wi-Fi Smart LED Light Bulb" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,173 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SISFps">LIFX A19 Wi-Fi Smart LED Light Bulb, Color Changing, Dimmable, No Hub Required, App and Voice Control, Works with Amazon...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$59.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2SISFps">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="61" data-price="15.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32OpENM"><img src="https://images-na.ssl-images-amazon.com/images/I/71-VuCz0ETL._SY879_.jpg" alt="Cuisinart Stainless Steel Chopper" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>662 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>61% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32OpENM">Cuisinart CTG-00-SCHP Stainless Steel Chopper</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$15.79</span><span class="ori_price">$40.00</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/32OpENM">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="66" data-price="9.12">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JXbJ0z"><img src="https://images-na.ssl-images-amazon.com/images/I/91GvKk0QoIL._SX522_.jpg" alt="Rolodex Deep Desk Drawer Organizer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>413 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>66% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JXbJ0z">Rolodex Deep Desk Drawer Organizer, Metal Mesh, Black (22131) 11.75 inches long by 15.25 inches wide</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.12</span><span class="ori_price">$26.49</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JXbJ0z">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="43" data-price="22.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JXcC9p"><img src="https://images-na.ssl-images-amazon.com/images/I/41EhrLmaZHL.jpg" alt="Rubbermaid Portable Closet" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>239 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>43% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JXcC9p">Rubbermaid Portable Closet, 60-inch (1807509)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$22.98</span><span class="ori_price">$39.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JXcC9p">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="69" data-price="22.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SISQ46"><img src="https://images-na.ssl-images-amazon.com/images/I/81pPeWGX--L._SX522_.jpg" alt="Swiffer WetJet Hardwood and Floor Spray Mop Cleaner Starter Kit" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>2,197 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>69% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SISQ46">Swiffer WetJet Hardwood and Floor Spray Mop Cleaner Starter Kit, Includes: 1 Power Mop, 5 Pads, Cleaner Solution, Batteries </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$22.97</span><span class="ori_price">$74.99</span>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2SISQ46">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="38" data-price="13.59">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2SO5grI"><img src="https://images-na.ssl-images-amazon.com/images/I/81qOeuTeqJL._SX522_.jpg" alt="" /></a>
