--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -1,6 +1,8 @@
 /*blog_03*/
 .blog_body{}
+.blogs .blog_body .blog_tit h2 .backtoshool_title{color:#ff4d4d;}
 .blog_body .school_box{border:2px solid #ccc;margin-bottom:50px;padding:15px;}
+.blog_body .box_top{margin-top:35px;}
 .blog_body .school_box .left_side{float:left;width:30%;font-family: 'Anton', sans-serif;}
 .blog_body .school_box .left_side a{background:#000;color:#fff;padding:30px 30px;display:block;text-decoration:none;text-align:center;font-size:30px;font-weight:bold;}
 .blog_body .school_box .left_side img{width:100%;}
